add main and slider components and add style for main component

--- a/src/app/left-menu/left-menu.component.html
+++ b/src/app/left-menu/left-menu.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="button">
+<div class="left-menu">
+    <div class="menu-btn">
         <div></div>
         <div></div>
         <div></div>
