--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-left-menu></app-left-menu>
+<div class="container">
+    <app-left-menu></app-left-menu>
+    <div class="main-container">
+        <app-main></app-main>
+        <app-slider></app-slider>
+    </div>
+</div>
