add cursor and create slider

--- a/src/app/left-menu/left-menu.component.scss
+++ b/src/app/left-menu/left-menu.component.scss
@@ -32,7 +32,7 @@
     }
 
     .menu-btn:hover {
-        cursor: pointer;
+        cursor: url('/assets/cursor/pointer.png'), auto;
     }
 
     .menu-btn:hover {
