add adaptability for 1024-1439px, add background gradient for slider, fixed bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="container">
     <app-left-menu></app-left-menu>
     <div class="main-container">
-        <app-main></app-main>
-        <app-slider></app-slider>
+        <div class="main-container-item">
+            <app-main></app-main>
+        </div>
+        <div class="main-container-item">
+            <app-slider></app-slider>
+        </div>
     </div>
 </div>
