--- a/src/app/left-menu/left-menu.component.html
+++ b/src/app/left-menu/left-menu.component.html
@@ -1,9 +1,5 @@
 <div class="left-menu">
-    <div class="menu-btn">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+    <app-dash></app-dash>
 
     <div class="lang">
         Eng
