--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,6 +4,7 @@
             Need for drive
         </div>
         <div class="map">
+            <img src="/assets/map/icon.png" alt="arrow">
             <div class="city">Ульяновск</div>
         </div>
     </div>
