--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 .info {
     display: flex;
     flex-direction: column;
@@ -10,6 +8,10 @@
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
+
+    @media screen and (max-width: 1440px){
+        padding: 0px 32px;
+    }
 }
 
 .info {
@@ -31,6 +33,10 @@
         }
 
         .map {
+            img {
+                margin-right: 7px;
+            }
+
             .city {
                 font-size: 14px;
                 color: #999999;
