--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,33 +1,35 @@
 <div class="slider">
-    <div class="slider-arrow">
-        <img src="/assets/arrows/arrow_left.svg" alt="arrow">
-    </div>
-
-    <div class="slider-center">
-        <div class="slider-block-info">
-            <div class="slider-title">
-                Бесплатная парковка
-            </div>
-            <div class="slider-description">
-                Оставляйте машину на платных городских парковках и разрешенных местах,
-                не нарушая ПДД, а также в аэропортах.
-            </div>
-            <div class="slider-btn">
-                <div>
-                    Подробнее
+    <div class="slider-background">
+        <div class="slider-arrow">
+            <img src="/assets/arrows/arrow_left.svg" alt="arrow">
+        </div>
+    
+        <div class="slider-center">
+            <div class="slider-block-info">
+                <div class="slider-title">
+                    Бесплатная парковка
+                </div>
+                <div class="slider-description">
+                    Оставляйте машину на платных городских парковках и разрешенных местах,
+                    не нарушая ПДД, а также в аэропортах.
+                </div>
+                <div class="slider-btn">
+                    <div>
+                        Подробнее
+                    </div>
                 </div>
             </div>
+    
+            <div class="slider-footer">
+                <div></div>
+                <div class="active"></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
-
-        <div class="slider-footer">
-            <div></div>
-            <div class="active"></div>
-            <div></div>
-            <div></div>
+    
+        <div class="slider-arrow">
+            <img src="/assets/arrows/arrow_right.svg" alt="arrow">
         </div>
-    </div>
-
-    <div class="slider-arrow">
-        <img src="/assets/arrows/arrow_right.svg" alt="arrow">
     </div>
 </div>
