--- a/src/app/left-menu/left-menu.component.scss
+++ b/src/app/left-menu/left-menu.component.scss
@@ -5,6 +5,17 @@
     width: 64px;
     height: 100%;
     background-color: #151b1f;
+
+    @media screen and (max-width: 1024px) {
+        width: 86px;
+    }
+
+    @media screen and (max-width: 768px) {
+        width: 62px;
+        height: auto;
+        position: absolute;
+        background-color: #ffffff;
+    }
 }
 
 .left-menu {
@@ -16,5 +27,9 @@
         color: #0ec261;
         align-self: center;
         margin-bottom: 30px;
+
+        @media screen and (max-width: 768px) {
+            display: none;
+        }
     }
 }
