--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -9,12 +9,8 @@
     font-style: normal;
     font-weight: bold;
 
-    @media screen and (max-width: 1440px) {
+    @media screen and (max-width: 1440px){
         padding: 0px 32px;
-    }
-
-    @media screen and (max-width: 768px) {
-        padding: 0;
     }
 }
 
@@ -23,33 +19,17 @@
         display: flex;
         justify-content: space-between;
         margin-top: 32px;
-
-        @media screen and (max-width: 768px) {
-            margin-top: 16px;
-            flex-direction: column;
-            padding: 0px 16px 0px 62px;
-        }
     }
 
     .header {
         .logo {
             font-size: 30px;
             color: #0ec261;
-
-            @media screen and (max-width: 768px) {
-                display: flex;
-                justify-content: flex-end;
-                margin-bottom: 9px;
-            }
         }
 
         .map {
             display: flex;
             align-items: center;
-
-            @media screen and (max-width: 768px) {
-                justify-content: flex-end;
-            }
         }
 
         .map {
@@ -60,6 +40,7 @@
             .city {
                 font-size: 14px;
                 color: #999999;
+                margin: auto;
             }
         }
     }
@@ -76,24 +57,12 @@
             color: #121212;
             font-size: 70px;
             margin-bottom: 4px;
-
-            @media screen and (max-width: 768px) {
-                padding: 0px 16px;
-                font-size: 32px;
-                margin-bottom: 6px;
-            }
         }
 
         .need-for-drive {
             font-size: 70px;
             color: #0ec261;
             margin-bottom: 34px;
-
-            @media screen and (max-width: 768px) {
-                padding: 0px 16px;
-                font-size: 32px;
-                margin-bottom: 16px;
-            }
         }
 
         .car-rental {
@@ -101,12 +70,6 @@
             font-weight: 300;
             font-size: 26px;
             margin-bottom: 60px;
-
-            @media screen and (max-width: 768px) {
-                padding: 0px 16px;
-                font-size: 18px;
-                margin-bottom: 32px;
-            }
         }
 
         .main-btn {
@@ -121,12 +84,6 @@
                 padding: 15px 60px 11px 60px;
                 background: linear-gradient(90deg, #0EC261 2.61%, #039F67 112.6%);
                 border-radius: 8px;
-                text-align: center;
-
-                @media screen and (max-width: 768px) {
-                    width: 100%;
-                    border-radius: 0px;
-                }
             }
         }
     }
@@ -135,37 +92,17 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 32px;
-
-        @media screen and (max-width: 768px) {
-            background-color: #151b1f;
-            flex-direction: column;
-            margin-bottom: 0px;
-            padding: 16px;
-            height: 40px;
-        }
     }
 
     .footer {
         .copyright {
             font-size: 13px;
             color: #999999;
-
-            @media screen and (max-width: 768px) {
-                display: flex;
-                justify-content: flex-end;
-                color: #eeeeee;
-            }
         }
 
         .number {
             font-size: 13px;
             color: #121212;
-
-            @media screen and (max-width: 768px) {
-                display: flex;
-                justify-content: flex-end;
-                color: #0ec261;
-            }
         }
     }
 }
