--- a/src/app/components/dash/dash.component.scss
+++ b/src/app/components/dash/dash.component.scss
@@ -6,6 +6,8 @@
 
     @media screen and (max-width: 768px) {
         margin-top: 24px;
+        position: absolute;
+        width: 62px;
     }
 }
 
