--- a/src/app/slider/slider.component.scss
+++ b/src/app/slider/slider.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     height: 100%;
     width: 100%;
-    background-image: url('/assets/cars/car2.png');
+    background-image: url('/assets/cars/car1.jpg');
     background-size: cover;
     background-position: center;
 
