--- a/src/app/left-menu/left-menu.component.scss
+++ b/src/app/left-menu/left-menu.component.scss
@@ -1,5 +1,6 @@
 .left-menu {
     display: flex;
+    flex-shrink: 0;
     flex-direction: column;
     justify-content: space-between;
     width: 64px;
@@ -11,23 +12,16 @@
     }
 
     @media screen and (max-width: 768px) {
-        width: 62px;
-        height: auto;
-        position: absolute;
+        width: 0px;
         background-color: #ffffff;
     }
 }
 
 .left-menu {
     .lang {
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: bold;
-        font-size: 13px;
-        color: #0ec261;
-        align-self: center;
         margin-bottom: 30px;
-
+        text-align: center;
+        
         @media screen and (max-width: 768px) {
             display: none;
         }
